Fix Linux omnibox handling of text with schemes

Fixes a regression in Linux handling of omnibox text like dict:word.
Regression caused omnibox to default to treating it as a url. This
CL makes Linux default to treating it as search text.

Regression introduced in https://chromium-review.googlesource.com/c/chromium/src/+/966896

Bug: 838570
Change-Id: I26be4279605ded6e3aed4e631f503e2b60551283
Reviewed-on: https://chromium-review.googlesource.com/1040881
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: David Bienvenu <davidbienvenu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555829}
Former-commit-id: bedfe9fc6251abcd690b8b048f59c21ced9800a0